# collections

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: array-heap.c  array-heap.h  array-list.c  array-list.h  array-queue.c  array-queue.h  array-stack.c  array-stack.h  array.c  array.h  collections.h  delinked-list.c  delinked-list.h  delist.c  delist.h  linked-graph.c  linked-graph.h  linked-list.c  linked-list.h  linked-queue.c  linked-queue.h  linked-stack.c  linked-stack.h  list.c  list.h  stack.c  stack.h  types.h
src/advanced/: avl-map.c  avl-map.h  linked-heap.c  linked-heap.h  priority-queue.c  priority-queue.h
src/basic/: array-heap.c  array-heap.h  array-list.c  array-list.h  array-queue.c  array-queue.h  array-stack.c  array-stack.h  avl-tree.c  avl-tree.h  delinked-list.c  delinked-list.h  linked-list.c  linked-list.h  linked-queue.c  linked-queue.h  linked-stack.c  linked-stack.h
src/test/: CMakeLists.txt
src/test/src/: array.c  test.h
src/test/src/array/: back.c  common.h  find.c  front.c  insert.c  push-back.c  push-front.c  set.c  slice.c
src/test/src/array-heap/: push-pop.c
src/test/src/array-list/: common.h  insert.c  quick-sort.c  slice.c
src/test/src/array-queue/: common.h  push-pop.c
src/test/src/array-stack/: common.h
src/test/src/delinked-list/: back.c  push-back.c  push-front.c  quick-sort.c  slice.c
src/test/src/delist/: back.c  common.h  find.c  front.c  insert.c  push-back.c  push-front.c  set.c
src/test/src/linked-list/: back.c  find.c  front.c  insert.c
src/test/src/linked-queue/: common.h  push-pop.c
src/test/src/list/: back.c  common.h  find.c  front.c  insert.c  push-back.c  push-front.c  set.c
src/test/src/stack/: common.h  push-pop.c
test/: CMakeLists.txt
test/src/: test.h
test/src/array-heap/: common.h  iterator.c  push-pop.c
test/src/array-list/: back.c  find.c  front.c  iterator.c  push-back.c  push-front.c  quick-sort.c  set.c
test/src/array-queue/: all.c  common.h  iterator.c  push-pop.c  some.c
test/src/array-stack/: common.h  iterator.c  push-pop.c
test/src/avl-map/: all.c  common.h  remove.c  set.c  some.c
test/src/avl-tree/: all.c  common.h  find.c  insert.c  remove.c  some.c
test/src/delinked-list/: common.h  find.c  front.c  insert.c  iterator.c  quick-sort.c  set.c
test/src/linked-heap/: common.h  push-pop.c
test/src/linked-list/: common.h  iterator.c  push-back.c  push-front.c  set.c  slice.c
test/src/linked-queue/: all.c  iterator.c  push-pop.c  some.c
test/src/linked-stack/: common.h  iterator.c  push-pop.c
test/src/priority-queue/: all.c  common.h  iterator.c  push-pop.c  some.c
